--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,12 @@
     <meta name="description" content="Schmeissen">
     <meta name="viewport" content="width=device-width, intial-scale=1">
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='dist/style.css') }}" />
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+		crossorigin="anonymous"></script>
+
     {% block scripts %}
     {% endblock scripts %}
 </head>
