--- a/app/templates/auth/password_reset_request.html
+++ b/app/templates/auth/password_reset_request.html
@@ -1,19 +1,40 @@
 {% extends "application.html" %}
 
-{% block app_content %}
-    <h1>{{ _('Reset your password') }}</h1>
+{% block icons %}
 
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.email.label }}<br>
-            {{ form.email(size=64) }}<br>
-            {% for error in form.email.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.submit() }}
-        </p>
-    </form>
+{% endblock icons %}
+
+{% block app_content %}
+    <div class="py-8">
+        <div class="container mx-auto">
+            <div class="mx-auto w-96 bg-white rounded p-12 shadow-xl">
+                <div class="my-8">
+                    <h1 class="text-2xl font-bold my-4">{{ _('Reset your password') }}</h1>
+                </div>
+                <div class="my-8">
+                    <p class="text-black text-sm text-opacity-70">Enter the email address associated with your account and we'll send you a link to reset your password.</p>
+                </div>
+                <form action="" method="post" novalidate>
+                    {{ form.hidden_tag() }}
+                    <div class="my-8">
+                        <div>
+                            <label for="email" class="text-sm">Email</label>
+                        </div>
+                        <div class="w-full my-4">
+                            {{ form.email(class="w-full border rounded py-2") }}
+                        </div>
+                        
+                        {% for error in form.email.errors %}
+                        <div>
+                            <span class="text-sm text-red-500">{{ error }}</span>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="my-8">
+                        {{ form.submit(class="w-full bg-indigo-500 rounded py-3 text-white") }}
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock app_content %}
