--- a/app/templates/core/game.html
+++ b/app/templates/core/game.html
@@ -5,9 +5,10 @@
 {% endblock scripts %}
 
 {% block app_content %}
-    <h1>Schmeissen Game Session</h1>
+    <div class="mx-72 py-4 px-8">
+        <h1>Schmeissen Game Session</h1>
 
-    <textarea id="chat" cols="80" rows="20"></textarea><br><br>
-    <input id="text" size="80" placeholder="Enter your message here"><br><br>
-    <a id="exit" href="#">Leave Session</a>
+        <textarea id="chat" cols="80" rows="20"></textarea><br><br>
+        <input id="text" size="80" placeholder="Enter your message here"><br><br>
+    </div>
 {% endblock app_content %}
