--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,35 +1,67 @@
 {% extends "application.html" %}
 
-{% block app_content %}
-    <h1>{{ _('Sign In') }}</h1>
+{% block icons %}
 
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.remember_me() }} {{ form.remember_me.label }}
-        </p>
-        <p>
-            {{ form.submit() }}
-        </p>
-        <p>
-            {{ _('New User?') }} <a href="{{ url_for('auth.register') }}">{{ _('Click to Register!') }}</a>
-        </p>
-        <p>
-            {{ _('Forgot your password?') }} <a href="{{ url_for('auth.password_reset_request') }}">{{ _('Click to reset it.') }}</a>
-        </p>
-    </form>
+{% endblock icons %}
+
+{% block app_content %}
+    <div class="py-8">
+        <div class="container mx-auto">
+            <div class="mx-auto w-96 bg-white rounded p-12 shadow-xl">
+                <div class="my-8">
+                    <h2 class="text-2xl font-bold my-4">{{ _('Sign In') }}</h2>
+                </div>
+                <form action="" method="post" novalidate>
+                    {{ form.hidden_tag() }}
+                    <div class="my-8">
+                        <div>
+                            <label for="username" class="text-sm">Username</label>
+                        </div>
+                        <div class="w-full my-4">
+                            {{ form.username(class="w-full border rounded p-2") }}
+                        </div>
+
+                        {% for error in form.username.errors %}
+                        <div>
+                            <span class="text-sm text-red-500">{{ error }}</span>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="my-8">
+                        <div class="flex flex-row items-center">
+                            <div class="flex-auto">
+                                <label for="password" class="text-sm">Password</label>
+                            </div>
+                            <div class="flex-auto">
+                                <a class="flex justify-end text-sm text-indigo-400" href="{{ url_for('auth.password_reset_request') }}">{{ _('Forgot your password?') }}</a>
+                            </div>
+                        </div>
+                        <div class="w-full my-4">
+                            {{ form.password(class="w-full border rounded p-2") }}
+                        </div>
+
+                        {% for error in form.password.errors %}
+                        <div>
+                            <span class="text-sm text-red-500">{{ error }}</span>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="flex flex-row items-center my-8">
+                        <div class="flex-initial">
+                            {{ form.remember_me(class="justify-center") }}
+                        </div>
+                        <div class="flex-initial px-2">
+                            <label for="remember_me" class="text-sm">Remember Me</label>
+                        </div>
+                    </div>
+                    <div class="my-8">
+                        {% include "includes/_flashed_messages.html" %}
+                    </div>
+                    <div class="my-8">
+                        {{ form.submit(class="w-full bg-indigo-500 rounded py-3 text-white") }}
+                    </div>
+                </form>
+            </div>
+        </div>
+    <div>
 {% endblock app_content %}
