--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,10 @@
     <meta name="description" content="Schmeissen">
     <meta name="viewport" content="width=device-width, intial-scale=1">
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/style.css') }}" />
 
     {% block scripts %}
